k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stats-app
  namespace: apps-prod
spec:
  selector:
    app: stats-app
  ports:
  - port: 80
    targetPort: 3000
s
